--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="script.js"></script>
     <header class="header">
         <input type="text" id="entrada">
-        <button id="boton">Search</button>
+        <button id="boton">Search Image</button>
     </header>
     <div class="slider__container">
         <div class="slider" id="slider">
